[gd_scene load_steps=3 format=3 uid="uid://dlu5f2iw00lrd"]

[ext_resource type="Script" path="res://Events/Introduction/introduction.gd" id="1_e2m0l"]
[ext_resource type="Texture2D" uid="uid://cghtj0xi576c" path="res://Player/player.png" id="2_mhppt"]

[node name="Introduction" type="Node2D"]
script = ExtResource("1_e2m0l")

[node name="PlayableArea" type="ColorRect" parent="."]
visible = false
offset_left = 710.0
offset_top = 450.0
offset_right = 1210.0
offset_bottom = 950.0
color = Color(0.4, 0, 0.580392, 1)

[node name="Background" type="ColorRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0.192157, 0, 0.278431, 1)

[node name="Player" type="Sprite2D" parent="."]
position = Vector2(960, 700)
scale = Vector2(0.1, 0.1)
texture = ExtResource("2_mhppt")

[node name="FadeTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="FadeRect" type="ColorRect" parent="."]
z_index = 2
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0, 0, 0, 1)

[connection signal="timeout" from="FadeTimer" to="." method="_on_fade_timer_timeout"]
